--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "standalone:start": "node .next/standalone/server.js",
     "docker:build": "docker build -t sig-fms-web-img:v1.0.0 -t sig-fms-web-img:latest --build-arg VERSION=1.0.0  --platform linux/amd64 --no-cache .",
-    "docker:run": "docker run -d -p 3000:3000 --name sig-fms-web --restart always sig-fms-web-img",
+    "docker:run": "docker run -d -p 3000:3000 --name sig-fms-web --env-file .env.local --restart always sig-fms-web-img",
     "lint": "eslint"
   },
   "dependencies": {
